--- a/contact.qmd
+++ b/contact.qmd
@@ -2,6 +2,8 @@
 title: "Contact"
 ---
 
-📧 [rebeccali@ucla.edu](mailto:rebeccali@ucla.edu)
-💼 [LinkedIn](https://www.linkedin.com/in/rebecca-li-a46529271/){target="_blank"}
+📧 [rebeccali\@ucla.edu](mailto:rebeccali@ucla.edu)<br> 
+
+💼 [LinkedIn](https://www.linkedin.com/in/rebecca-li-a46529271/){target="_blank"}<br> 
+
 🐙 [GitHub](https://github.com/OreoWin){target="_blank"}
