--- a/projects.qmd
+++ b/projects.qmd
@@ -2,57 +2,97 @@
 title: "Projects"
 ---
 
-### XGBoost vs. SVM: Classification and Model Comparison
+### XGBoost vs. SVM — Classification and Decision Boundaries
 *Dec 2024*
-**Summary** 
-This project compares the performance and decision boundaries of two popular machine learning algorithms — XGBoost and Support Vector Machine (SVM) — on a simulated binary classification dataset. The goal was to visualize how each model learns nonlinear boundaries and evaluate their relative performance on synthetic data.\
-**Process** 
-- Generated 5,000 random data points with two features and binary labels based on their distance from the origin.
-- Split data into training and testing sets (80/20).
-- Trained an XGBoost Classifier and an SVM Classifier, both using default hyperparameters.
-- Evaluated and compared training and testing accuracy for both models.
-- Visualized decision boundaries using Matplotlib to illustrate model interpretability and overfitting differences.\
-**Outcome** 
-- XGBoost: Training Accuracy = 99.95%, Testing Accuracy = 98.7%.
-- SVM: Training Accuracy = 99.2%, Testing Accuracy = 99.0%.
-- Both models achieved high accuracy, with SVM showing slightly better generalization on unseen data.
-- The visualization confirmed that XGBoost’s boundaries were more adaptive but potentially overfitted, while SVM maintained smoother, more generalized boundaries.
+
+**Summary**
+
+Compared the performance and decision boundaries of two popular machine learning algorithms — XGBoost and Support Vector Machine (SVM) — on a simulated binary classification dataset. The goal was to visualize how each model learns nonlinear boundaries and evaluate their relative performance on synthetic data.
+
+**Process**
+
+- Generate 5,000 two-feature points with binary labels from a distance-to-origin rule.
+
+- Split data into train/test (80/20).
+
+- Train XGBoostClassifier and SVC with default hyperparameters.
+
+- Evaluate train vs. test accuracy.
+
+- Visualize decision boundaries with Matplotlib.
+
+**Outcome**
+
+- XGBoost: Train 99.95%, Test 98.7%.
+
+- SVM: Train 99.2%, Test 99.0%.
+
+- Both high accuracy; SVM generalizes slightly better, while XGBoost is more adaptive with mild overfit risk.
+
+[View code on GitHub](https://github.com/OreoWin/rebeccali-portfolio/blob/main/files/xgb_svm.py){.btn .btn-primary target=_blank}
+[Download .py](files/xgb_svm.py){.btn .btn-outline-secondary download}
 
 
 ------------------------------------------------------------------------
 
 ### California Wildfire Damage Analysis
 
-**Summary** 
-This project investigates patterns and relationships among wildfire damage indicators across California using Principal Component Analysis (PCA) and Factor Analysis (FA). The goal was to uncover latent dimensions driving wildfire severity and evaluate the interdependence between physical and economic loss variables.\
-**Process** 
-- Collected and cleaned wildfire damage data (acres burned, homes and businesses destroyed, vehicles damaged, injuries, fatalities, and financial loss).
-- Replaced missing numeric values with their mean and standardized all continuous variables.
-- Performed PCA to reduce dimensionality and visualize the contribution of each factor to total variance.
-- Conducted Factor Analysis (using Maximum Likelihood Estimation + Varimax rotation) to identify underlying constructs that explain correlated damage metrics.
-- Evaluated factor adequacy via KMO test (= 0.5) and Bartlett’s test (p = 0.69).
+**Summary**
+
+Investigated patterns and relationships among wildfire damage indicators across California using Principal Component Analysis (PCA) and Factor Analysis (FA). The goal was to uncover latent dimensions driving wildfire severity and evaluate the interdependence between physical and economic loss variables.
+
+**Process**
+
+- Collected and cleaned wildfire damage data (acres burned, homes/businesses destroyed, vehicles damaged, injuries, fatalities, financial loss).
+
+- Replaced missing numeric values with mean imputation; standardized continuous variables.
+
+- Performed PCA to reduce dimensionality and visualize factor contributions to total variance.
+
+- Conducted Factor Analysis (MLE + Varimax) to identify constructs explaining correlated damage metrics.
+
+- Evaluated factor adequacy via KMO (= 0.5) and Bartlett’s test (p = 0.69).
+
 **Outcome**
-- The first two principal components explained roughly 37 % of total variance, highlighting Area Burned and Financial Loss as dominant variables.
-- Factor Analysis revealed two interpretable factors: one related to property and economic damage, and another to physical impact and casualties.
-- Findings emphasize that financial losses are strongly correlated with infrastructure destruction, while injuries and fatalities form a separate dimension of wildfire severity.
+
+- First two principal components explained ~37% of total variance, with Area Burned and Financial Loss dominant.
+
+- Factor Analysis revealed two interpretable factors: (1) property/economic damage and (2) physical impact/casualties.
+
+- Findings suggest financial losses correlate strongly with infrastructure destruction, while injuries/fatalities form a distinct severity dimension.
+
+
+[California Wildfire Damage Analysis](files/wildfair.pdf){.btn .btn-primary target="_blank"}
 
 ------------------------------------------------------------------------
 
 ### Portfolio Construction and Risk Analysis
 *Feb 2025*
-**Summary** 
-This project focuses on portfolio optimization and risk evaluation using real-world stock data from the technology and financial sectors. The goal was to construct and analyze multiple portfolio types—including Minimum Variance, Tangency, and Target Return portfolios—across different time periods, and to assess their performance using modern portfolio theory and CAPM.\
-**Process** 
-- Collected and cleaned daily and monthly historical stock prices (2020–2023) and computed log-returns.
-- Applied Markowitz Mean-Variance Optimization in R to build portfolios targeting annual expected returns of 5%, 7.5%, 10%, 12.5%, and 15%, under a no-short-selling constraint.
-- Computed tangency portfolios and minimum variance portfolios, integrating a dynamic risk-free rate based on 10-year U.S. Treasury yields.
-- Conducted CAPM-based risk analysis to estimate each stock’s alpha and beta against SPY and QQQ ETFs, testing significance to evaluate market efficiency.
-- Extended analysis with Value-at-Risk (VaR) estimation using a multivariate t-distribution to quantify downside risk.\
+
+**Summary**
+
+Focused on portfolio optimization and risk evaluation using real-world stock data from the technology and financial sectors. The goal was to construct and analyze multiple portfolio types—including Minimum Variance, Tangency, and Target Return portfolios—across different time periods, and to assess their performance using modern portfolio theory and CAPM.
+
+**Process**
+
+- Collected daily/monthly prices (2020–2023) and computed log-returns.
+
+- Applied Markowitz Mean–Variance Optimization in R under a no-short-selling constraint for 5%, 7.5%, 10%, 12.5%, and 15% target returns.
+
+- Computed Tangency and Minimum Variance portfolios, using a dynamic risk-free rate from 10-year U.S. Treasury yields.
+
+- Ran CAPM to estimate alpha/beta vs. SPY and QQQ; tested significance to gauge market efficiency.
+
+- Estimated Value-at-Risk (VaR) with a multivariate t-distribution to quantify downside risk.
 
 **Outcome**
-- Including financial sector stocks improved diversification and reduced portfolio volatility.
-- Tangency portfolios exhibited the highest Sharpe Ratios, showing superior risk-adjusted returns.
-- CAPM results revealed most alphas were statistically insignificant, consistent with market efficiency.
-- VaR analysis confirmed that Tangency Portfolios carried higher potential downside risk but delivered better long-term returns.
 
-[Portfolio Construction and Risk Analysis](files/Portfolio Construction and Risk Analysis.pdf){.btn .btn-primary target=_blank}
+- Including financial sector stocks improved diversification and reduced volatility.
+
+- Tangency portfolios achieved the highest Sharpe ratios (better risk-adjusted returns).
+
+- CAPM results showed most alphas were statistically insignificant (consistent with market efficiency).
+
+- VaR indicated Tangency portfolios carry higher potential downside risk yet deliver superior long-term returns.
+
+[Portfolio Construction and Risk Analysis](files/Portfolio%20Construction%20and%20Risk%20Analysis.pdf){.btn .btn-primary target="_blank"}
